Slider in search refinement and alignment are now fixed and functional in mapListing Search Refinement modal

--- a/public/CSS/mainMapSearches.css
+++ b/public/CSS/mainMapSearches.css
@@ -1,3 +1,18 @@
+
+#slider {
+	margin-top: 3%;
+	margin-bottom: 3%;
+}
+
+#centerText{
+	text-align: center;
+	text-decoration: underline;
+}
+
+.row {
+	margin-bottom: 3%;
+}
+
 #sButton {
 	width: 9vmax;
 	font-size: 1.1vmax;
@@ -39,8 +54,6 @@ input {
 	right:0px;
 	bottom: 0px;
 	width:100%;
-	font-size: 1.5vmax;
-
 }
 
 #petsBox {
@@ -49,6 +62,10 @@ input {
 
 .textLabel {
 	margin-right: 15%;
+}
+
+#search {
+	font-size: 0.85em;
 }
 
 #search .panel {
